--- a/index.html
+++ b/index.html
@@ -9,5 +9,6 @@
 <body>
     <h1>Hola Juan Carlos</h1>
     <p>Como estas broderrrrrr</p>
+    <h2>Esto es una prueba de GitHub</h2>
 </body>
 </html>
