--- a/index.html
+++ b/index.html
@@ -10,5 +10,6 @@
     <h1>Hola Juan Carlos</h1>
     <p>Como estas broderrrrrr</p>
     <h2>Esto es una prueba de GitHub</h2>
+    <p>parrafo simple</p>
 </body>
 </html>
